# vector-rules

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  Cross.toml  README.md  deny.toml  rust-toolchain.toml
.cargo/: config.toml
.githooks/: pre-push
.github/workflows/: ci.yml  release.yml
apps/console/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
apps/console/src/: App.svelte  app.css
apps/console/src/lib/: Record.svelte  api.js  format.js
apps/console/src/lib/examples/: FraudTriage.svelte  Semantic.svelte  Streaming.svelte
apps/console/src/lib/pages/: Examples.svelte
apps/console/src/lib/panels/: Activity.svelte  Audit.svelte  Memory.svelte  Rules.svelte  Storage.svelte  Test.svelte  WhatIf.svelte
apps/examples/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
apps/examples/public/models/: model.json
apps/examples/scripts/: deploy.sh  seed-cache.mjs
apps/examples/src/: App.svelte
apps/examples/src/lib/: cache-key.js  embed.js
apps/examples/src/lib/examples/: AddressExample.svelte  FraudTriage.svelte  Prove.svelte  Semantic.svelte  address.js
apps/examples/src/lib/panels/: Address.svelte
components/vrules-embedding-wllama/: CMakeLists.txt  build.sh
components/vrules-embedding-wllama/src/: embedding.cpp  ggml-wasi-fallback.h
crates/em-log-n/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
crates/em-log-n-wasm/: Cargo.toml  README.md
crates/em-log-n-wasm/src/: lib.rs
crates/em-log-n-wasm/web/: em_log_n_browser.js
crates/em-log-n/docs/: benchmarks.md  cold-tier.md  design.md  embedding-tuning.md  hard-constraints.md  roadmap.md
crates/em-log-n/examples/: storage_bench.rs
crates/em-log-n/src/: codec.rs  coldtier.rs  coldtier_cloud.rs  detail_backfill.rs  dual_index.rs  embed.rs  embed_cache.rs  error.rs  key.rs  lib.rs  retention.rs  shard.rs  store.rs
crates/em-log-n/tests/: coldtier.rs  coldtier_cloud.rs  concurrency.rs  custom_metric.rs  index_persistence.rs  key_props.rs  multi_index.rs  shard_spike.rs
crates/vrules-address-indexer/: Cargo.toml  README.md
crates/vrules-address-indexer/src/: lib.rs  main.rs
crates/vrules-address-libpostal/: Cargo.toml
crates/vrules-address-libpostal/src/: lib.rs  native.rs
crates/vrules-admin-component/: Cargo.toml
crates/vrules-admin-component/src/: lib.rs
crates/vrules-cache-component/: Cargo.toml
crates/vrules-cache-component/src/: lib.rs
crates/vrules-canon/: Cargo.toml  README.md
crates/vrules-canon/src/: audit.rs  json.rs  lib.rs  mask.rs  sim.rs
crates/vrules-core/: .gitignore  Cargo.toml  LICENSE-MIT  README.md
crates/vrules-core/docs/: DESIGN.md  FEATURE-COVERAGE.md
crates/vrules-core/src/: engine_eval.rs  geometry.rs  lib.rs  prove.rs  vec_bridge.rs
crates/vrules-core/src/address/: bridge.rs  mod.rs  native.rs  verification.rs
crates/vrules-core/src/canon/: bridge.rs  mod.rs
crates/vrules-core/src/vec_expr/: arith.rs  mod.rs
crates/vrules-core/tests/: conformance_backward.rs  fraud_triage.rs  grl_rule_packs.rs
crates/vrules-gcp-component/: Cargo.toml
crates/vrules-gcp-component/src/: lib.rs
crates/vrules-rules-component/: Cargo.toml
crates/vrules-rules-component/src/: lib.rs  repository.rs
crates/vrules-runtime-component/: Cargo.toml
crates/vrules-runtime-component/src/: lib.rs
crates/vrules-shim/: Cargo.toml  README.md
crates/vrules-shim/src/: cache_key.rs  host.rs  lib.rs  main.rs  manifest.rs  transport.rs
crates/vrules-shim/tests/: rest.rs
crates/vrules-storage-component/: Cargo.toml
crates/vrules-storage-component/src/: lib.rs
crates/vrules-wasm/: Cargo.toml  README.md
crates/vrules-wasm/src/: lib.rs
docs/: COMPETITIVE-LANDSCAPE.md  EXAMPLES.md  GPU-TENSOR-ROADMAP.md  ROADMAP.md
release/: build-components.sh  build-wasm.sh  build.sh  fetch-model.sh  pins.env  vrules-components.json
scripts/: ci-check.sh
shared-rules/: README.md  vrules-rules.toml
shared-rules/address/: selection.grl  validation.grl
shared-rules/fraud/: triage.grl
shared-rules/proxy/: classification.grl  exposure.grl  routing.grl  system_metrics.grl  tools.json
shared-rules/schemas/: facts.json
shared-rules/shared/: base.grl
wit/: vrules.wit
