[package]
name = "em-log-n-wasm"
version.workspace = true
edition = "2021"
description = "Browser WASM distribution of em-log-n with local IndexedDB-backed persistence wrapper."
license = "MIT OR Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "=0.2.126"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
serde-wasm-bindgen = "=0.6.5"
console_error_panic_hook = "=0.1.7"
em-log-n = { path = "../em-log-n", default-features = false }

[dev-dependencies]
wasm-bindgen-test = "=0.3.76"
