[package]
name = "vrules-cache-component"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Append-only content-addressed embedding cache store for the vrules-rest tier."
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wit-bindgen = { workspace = true }

[dev-dependencies]
tempfile = "=3.27.0"
