[package]
name = "vrules-canon"
version = "0.1.0"
edition = "2021"
rust-version = "1.90"
license = "MIT OR Apache-2.0"
description = "Deterministic, pluggable text/JSON canonicalization to maximize embedding-cache hits, plus the vrules execution-audit canonical form (record + cache key)."
repository = "https://github.com/ops-ping/vrules-canon"
keywords = ["canonicalization", "embeddings", "cache", "audit", "rete"]
categories = ["text-processing", "caching"]

[lib]
name = "vrules_canon"
path = "src/lib.rs"

# Pure-Rust, zero-dependency by default (the canon core). `json` pulls serde_json
# for the structured canonicalizers; `audit` pulls serde for the execution record.
# Versions pinned with `=` per the workspace convention.
[features]
default = []
json = ["dep:serde_json"]
audit = ["dep:serde", "dep:serde_json"]

[dependencies]
serde = { version = "=1.0.228", features = ["derive"], optional = true }
serde_json = { version = "=1.0.150", optional = true }
