[package]
name = "vrules-runtime-component"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "WASI runtime for governed MCP tool exposure, routing, audit, agent memory, and provider composition."
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
blake3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wit-bindgen = { workspace = true }
