[package]
name = "vrules-shim"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Native MCP policy host for sandboxed WASI rules, memory, providers, and pluggable GGUF embeddings."
publish = false

[lib]
name = "vrules_shim"
path = "src/lib.rs"

[[bin]]
name = "vrules-shim"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
blake3 = { workspace = true }
futures-util = { workspace = true }
include_dir = { workspace = true }
mime_guess = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tempfile = "=3.27.0"

[package.metadata.deb]
maintainer = "ops-ping <ops@phage-shift.com>"
section = "utils"
priority = "optional"
extended-description = "MCP stdio by default and optional admin HTTP/WebSocket daemon mode, hosting pluggable vrules WASI components with Wasmtime."
